<resources>
    <string name="app_name">Spotify Videos</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="login_prompt">Login to set customizations!</string>
    <string name="login_btn">Login</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_fact_type_title">Fun Fact Type</string>

    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>

    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="logo_reg_activity">Logo</string>
    <string name="sign_in_with_google">Sign Up With google</string>
    <string name="sign_up_reg_activity">Sign UP</string>
    <string name="splash_image">splash image</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email_hint">Email</string>
    <string name="continue_with_google_login">continue with google</string>

</resources>